Standardize on cc/hh file extensions for C++ source/headers.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,9 +5,9 @@ MAN=
 CFLAGS=		-I${.CURDIR}/../src \
 		-I${.CURDIR}/dependencies/catch
 
-SRCS=		tests.cpp \
-		paths_tests.cpp \
-		project_tests.cpp
+SRCS=		tests.cc \
+		paths_tests.cc \
+		project_tests.cc
 
 test: ${PROG_CXX}
 	${.OBJDIR}/${PROG_CXX}
