Add a generic work queue API.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,7 +7,8 @@ CFLAGS=		-I${.CURDIR}/../src \
 
 SRCS=		tests.cc \
 		paths_tests.cc \
-		project_tests.cc
+		project_tests.cc \
+		work_queue_tests.cc
 
 test: ${PROG_CXX}
 	${.OBJDIR}/${PROG_CXX}
